// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Calls the amp media player 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c1234567890/p01k6msp/en-GB/amp"}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c4 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c5 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(5/6*(100% - 6 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(5/8*(100% - 8 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(10/20*(100% - 20 * 1rem) + 9 * 1rem );
    margin: 0 0.5rem;
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
  }
}

<div>
      <div
        class="c0 c1"
        dir="ltr"
      >
        <div
          class="c2"
          dir="ltr"
        >
          <div
            class="c3"
            dir="ltr"
          >
            <figure
              class="c4"
            >
              <div
                class="c5"
              >
                <amp-iframe
                  allowfullscreen="allowfullscreen"
                  frameborder="0"
                  layout="fill"
                  sandbox="allow-scripts allow-same-origin"
                  scrolling="no"
                  src="https://embed-host.bbc.com/ws/av-embeds/articles/c1234567890/p01k6msp/en-GB/amp"
                  title="Media player"
                >
                  <amp-img
                    alt=""
                    attribution=""
                    height="16"
                    layout="fill"
                    placeholder="true"
                    src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                    srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                    width="9"
                  />
                </amp-iframe>
              </div>
            </figure>
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Calls the canonical media player, with a placeholder 1`] = `
.c14 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c4 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c16 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c10 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c10:hover,
.c10:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c13 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c15 {
  display: block;
  margin-top: 0.5rem;
}

.c8 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: rgba(34,34,34,0.75);
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

.c9 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c7 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c11 {
  position: absolute;
  bottom: 0;
}

.c6:hover .c11,
.c6:focus .c11 {
  background-color: #B80000;
}

.c5 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c8 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c9 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c9 {
    padding: 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(5/6*(100% - 6 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(5/8*(100% - 8 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(10/20*(100% - 20 * 1rem) + 9 * 1rem );
    margin: 0 0.5rem;
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
  }
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c1234567890/p01k6msp/en-GB"}
    </script>
  </head>
  <body>
    <div>
      <div
        class="c0 c1"
        dir="ltr"
      >
        <div
          class="c2"
          dir="ltr"
        >
          <div
            class="c3"
            dir="ltr"
          >
            <figure
              class="c4"
            >
              <div
                class="c5"
              >
                <div
                  class="c6 c7"
                >
                  <div
                    class="c8"
                  >
                    <strong
                      aria-hidden="true"
                      class="c9"
                    >
                      Contains strong language and adult humour.
                    </strong>
                  </div>
                  <button
                    class="c10 c11"
                  >
                    <span
                      class="c12"
                    >
                      Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
                    </span>
                    <div
                      aria-hidden="true"
                      class="c13"
                    >
                      <svg
                        class="c14"
                        focusable="false"
                        height="12px"
                        viewBox="0 0 32 32"
                        width="12px"
                      >
                        <polygon
                          points="3,32 29,16 3,0"
                        />
                      </svg>
                    </div>
                    <time
                      aria-hidden="true"
                      class="c15"
                      datetime="PT3M11S"
                    >
                      03:11
                    </time>
                  </button>
                  <img
                    alt=""
                    class="c16"
                    src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                    srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                  />
                </div>
              </div>
            </figure>
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;
